@@ -9,7 +9,7 @@
 ## Notes-zhCN: 提示栏显示其它玩家的平均物品等级
 
 ## Author: Scotepi
-## Version: 2.0-r3
+## Version: 2.0-r4
 ## SavedVariables: SIL_Settings, SIL_CacheGUID
 
 embeds.xml
